--- a/plotting/edv.qmd
+++ b/plotting/edv.qmd
@@ -30,6 +30,12 @@ This concept has been termed by Bergstrom and West as the principle of proportio
 
 > *"..., we perceive the area in a pie chart differently from the same area in a bar plot. The fundamental reason is that human perception primarily judges distances and not areas. Thus, if a data value is encoded entirely as a distance, as is the case with the length of a bar, we perceive it more accurately than when the data value is encoded through a combination of two or more distances that jointly create an area."*
 
+Functions to change the scale of point sizes (when using `aes(size = xx)` in a `geom_point` fx.):
+- `ggplot2::scale_radius` can be used to scale based on radius rather than area since.
+- `ggplot2::scale_size_area` can be used to make sure ratio of sizes is equal to ratio of data values.
+
+**Note!** Above function are generally not recommended, as they break with the principle of proportional ink. However, still might be cases where it makes sense to do.
+
 ## [Overplotting](https://clauswilke.com/dataviz/overlapping-points.html)
 
 **Issue:** points that overlap.
@@ -38,9 +44,13 @@ This concept has been termed by Bergstrom and West as the principle of proportio
 - Transparent points
 - Jitter
 - High density of points: *Use 2D histogram*
+  - See `ggplot2::geom_bin2d` and `ggplot2::geom_hex` (hexagons are more "correct")
+  - See also `smoothScatter` in the base `graphics` package, whic makes a 2D kernel density estimate but also shows points "on the edge".
 - Contour lines
+  - See `ggplot2::geom_density2d` or `ggplot2::geom_density2d_filled`
+    - Be wary of `ggplot2::geom_density2d` not showing the entire range of data
 
-## [Color pitfalls](https://clauswilke.com/dataviz/color-pitfalls.html)
+## [Color pitfalls](https://clauswilke.com/dataviz/color-pitfalls.html) {#sec-colorpitfalls}
 
 - Encoding too much or irrelevant information
   - Too much:
@@ -48,11 +58,14 @@ This concept has been termed by Bergstrom and West as the principle of proportio
     - **Possible solutions**: Label points (potentially color according to a categorisation variable with fewer levels while labelling according to the variable of interest)
   - **Irrelevant:** Do not color without a clear purpose that helps answer a question.
 
-**Tip:** To make sure your figures work for people with *cvd (color-vision-deficiency)*, don’t just rely on specific color scales. Instead, test your figures in a cvd simulator.
+**Tip:** To make sure your figures work for people with *cvd (color-vision-deficiency)*, don’t just rely on specific color scales. Instead, test your figures in a cvd simulator
+- See [`colorspace::deutan`](https://colorspace.r-forge.r-project.org/reference/simulate_cvd.html)
 
 ### It's not only about color
 
-> *"use color to enhance the visual appearance of the figure without relying entirely on color to convey key information."* [Redundant coding](https://clauswilke.com/dataviz/redundant-coding.html)
+[Redundant coding](https://clauswilke.com/dataviz/redundant-coding.html) in essence means we do more than one aesthetic mapping to a single variable. Wilke fx. recommends:
+
+> *"use color to enhance the visual appearance of the figure without relying entirely on color to convey key information."* 
 
 - **Scatter plots:** Fx. change the shape of points instead of only color.
 - **Line plots:**
@@ -64,6 +77,10 @@ This concept has been termed by Bergstrom and West as the principle of proportio
 
 > *"Whenever possible, design your figures so they don’t need a legend."*
 
+See packages:
+- `ggforce` which has `geom`s that take `label` as an aesthetic mapping
+- `directlabels`
+
 ## [Multi-panel figures](https://clauswilke.com/dataviz/multi-panel-figures.html)
 
 - **Small multiples:** *"Small multiples are plots consisting of multiple panels arranged in a regular grid. Each panel shows a different subset of the data but all panels use the same type of visualization."*
@@ -74,6 +91,7 @@ This concept has been termed by Bergstrom and West as the principle of proportio
 ## [Titles, captions and tables](https://clauswilke.com/dataviz/figure-titles-captions.html)
 
 - **Title:** *"Either the title is integrated into the actual figure display or it is provided as the first element of the caption underneath the figure."*
+  - Use `title`, `subtitle` and `caption` in `labs`.
 - **Axis and legend titles:**
   - Axis and legend titles should be informative. 
     - Display units in parentheses when possible.
@@ -81,6 +99,17 @@ This concept has been termed by Bergstrom and West as the principle of proportio
 - **Tables:**
   - See the 6-item breakdown of table guidelines in [this section](https://clauswilke.com/dataviz/figure-titles-captions.html#tables) from the reference in the title of this section.
   - Place captions on top (underneath for figures).
+  
+**Tip:** Use `expression`s to make LaTeX rendered text. Fx. write
+```{r, eval = FALSE}
+labs(x = expression(paste("Engine displacment (", "in"^3, ")")))
+```
+
+to render the exponent.
+
+## [Gestault rules](https://socviz.co/lookatdata.html#gestalt-rules)
+
+> *"The strong inferences we make about relationships between visual elements from relatively sparse visual information are called “gestalt rules”. They are not pure perceptual effects... Rather, they describe our tendency to infer relationships between the objects we are looking at in a way that goes beyond what is strictly visible..."*
 
 # References
 
@@ -88,7 +117,10 @@ This concept has been termed by Bergstrom and West as the principle of proportio
 
 - [Lecture 1 (Introduction to Data Visualisation)](https://www.stat.auckland.ac.nz/~paul/stats787/Current/Topics/intro.html)
   - [Slides](https://www.stat.auckland.ac.nz/~paul/stats787/Current/Slides/intro-slides.html#/)
-- [Lecture 3 (Effective Data Visualisations)](https://www.stat.auckland.ac.nz/~paul/stats787/Current/Topics/effective.html)
+- [Lecture 4 (Effective Data Visualisations)](https://www.stat.auckland.ac.nz/~paul/stats787/Current/Topics/effective.html)
+  - [Slides](https://www.stat.auckland.ac.nz/~paul/stats787/Current/Slides/effective-slides.html#/)
+- [Lecture 5 (Visual Perception)](https://www.stat.auckland.ac.nz/~paul/stats787/Current/Topics/perception.html)
+
 
 ## References from inside lecture notes
 
