Added little information about interactivity and maps

--- a/plotting/animation.qmd
+++ b/plotting/animation.qmd
@@ -21,3 +21,11 @@ Basic steps to produce animation:
 > NOTE! Install package [gifski](https://cran.r-project.org/web/packages/gifski/index.html). If installed, `gganimate` will make sure to use that as the backend when creating the GIFs
 
 See the [getting started](https://gganimate.com/articles/gganimate.html) article as well as run examples in references section of each `transition_...` function.
+
+### Create animation "superimposed" onto static image
+
+See example how to do this in [this model answer](https://mathiaslj.github.io/stats787uoa-data-visualisation/labs/lab6_answer.html#creating-the-animation-with-gganimate)
+
+### Misc notes about `gganimate`
+
+- If using `exit/enter_xx` function you NEED to specify a grouping aesthetic EXPLICITLY, which will devide data into subsets that the transitions will display in each frame.
